[package]
name = "ebook_crawler"
version = "0.1.0"
authors = ["Vence Lam <vence722@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.8"
scraper = "0.12.0"

